AM_CPPFLAGS = $(all_includes)

# use noinst_LIBRARIES to create a library that won't be installed
noinst_LTLIBRARIES = libosgPPU.la

libosgPPU_la_SOURCES = \
Camera.cpp \
ColorAttribute.cpp \
Processor.cpp \
ShaderAttribute.cpp \
Unit.cpp \
UnitBypass.cpp \
UnitCamera.cpp \
UnitCameraAttachmentBypass.cpp \
UnitDepthbufferBypass.cpp \
UnitInHistoryOut.cpp \
UnitInMipmapOut.cpp \
UnitInOut.cpp \
UnitInOutModule.cpp \
UnitInOutRepeat.cpp \
UnitInResampleOut.cpp \
UnitMipmapInMipmapOut.cpp \
UnitOut.cpp \
UnitOutCapture.cpp \
UnitText.cpp \
UnitTexture.cpp \
Utility.cpp \
Visitor.cpp

