SUBDIRS = wxsmith

AM_CPPFLAGS = $(all_includes) -I$(top_srcdir)/include/spineditor -I$(top_srcdir)/src/tinyxml $(PYTHON_CPPFLAGS) $(WX_CPPFLAGS)

# EXTRA_DIST = \
#     spinWX.cbp \
#     spinWX.workspace
# 
# if ENABLE_EDITOR
# bin_PROGRAMS = spineditor
# spineditor_SOURCES = \
# 	wxSpinTreeCtrl.cpp \
#     spinWX.cpp \
#     wxSpinEditor.cpp \
#     wxSpinMain.cpp \
#     wxSpinPropGrid.cpp \
#     wxSpinRenderer.cpp \
#     wxSpinSettings.cpp \
#     wxSpinTreeVisitor.cpp
# spineditor_LDFLAGS = -lSPIN $(SPIN_LDFLAGS) $(WX_LIBS)
# 
# dnl     CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
# dnl     CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
# dnl     CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
# 
# # FIXME: I doubt this works
# spineditor_LDADD = ../spin/libSPIN.la
# endif

