# spinviewer.png and spinserver.png are the icons for ../desktopentries on Gnome and KDE
imagesdir = $(datadir)/spinFramework/images
images_DATA = *.xpm *.gif *.png *.icns

desktopicondir = $(datadir)/pixmaps
desktopicon_DATA = spinserver.png spinviewer.png

EXTRA_DIST = $(images_DATA) $(desktopicon_DATA)
