# spinviewer.png and spinserver.png are the icons for ../desktopentries on Gnome and KDE
imagesdir = $(datadir)/spinFramework/images
images_DATA = icon_3Dsphere.xpm icon_avatar.xpm icon_D.xpm icon_next.xpm icon_prev.xpm \
              icon_reload.xpm icon_tree.xpm icon_3Dview.gif icon_configuration.gif \
              icon_eraser.gif icon_grid.gif icon_network.gif icon_question_text.gif \
              icon_refresh.gif icon_tree2.gif logo_SPIN_v2_512px.png spin_48x48.png \
              spinserver.png spinviewer.png spin.icns spinViewer.icns

desktopicondir = $(datadir)/pixmaps
desktopicon_DATA = spinserver.png spinviewer.png

EXTRA_DIST = $(images_DATA) $(desktopicon_DATA)
