# spinviewer.png and spinserver.png are the icons for ../desktopentries on Gnome and KDE
imagesdir = $(datadir)/spinframework/images
images_DATA = logo_SPIN_v2_512px.png spin_48x48.png \
              spinserver.png spinviewer.png spin.icns spinViewer.icns \
			  smoke.rgb spark03.png ssao_noise.png \
			  osg_negx.jpg osg_negy.jpg osg_negz.jpg osg_posx.jpg osg_posy.jpg osg_posz.jpg

desktopicondir = $(datadir)/pixmaps
desktopicon_DATA = spinserver.png spinviewer.png

EXTRA_DIST = $(images_DATA) $(desktopicon_DATA)
