shadersdir = $(datadir)/spinFramework/shaders
shaders_DATA = \
brightpass_fp.glsl \
bypass_fp.glsl \
depth_of_field_fp.glsl \
gauss_convolution_1Dx_fp.glsl \
gauss_convolution_1Dy_fp.glsl \
gauss_convolution_vp.glsl \
luminance_adapted_fp.glsl \
luminance_fp.glsl \
luminance_mipmap_fp.glsl \
ssao_fp.glsl \
ssao_renderscene_fp.glsl \
ssao_renderscene_vp.glsl \
ssao_vp.glsl \
tonemap_hdr_fp.glsl

EXTRA_DIST = $(shaders_DATA)
