shadersdir = $(datadir)/spinFramework/shaders
shaders_DATA = \
brightpass_fp.glsl \
bypass_fp.glsl \
dof_vp.glsl \
dof_computeBlur_fp.glsl \
dof_gauss_1Dx_fp.glsl \
dof_gauss_1Dy_fp.glsl \
gauss_convolution_1Dx_fp.glsl \
gauss_convolution_1Dy_fp.glsl \
gauss_convolution_vp.glsl \
luminance_adapted_fp.glsl \
luminance_fp.glsl \
luminance_mipmap_fp.glsl \
motionBlur_fp.glsl \
motionBlur_vp.glsl \
screenSpaceAmbientOcc_fp.glsl \
screenSpaceAmbientOcc_vp.glsl \
screenSpaceAO_composite_fp.glsl \
screenSpaceAO_composite_vp.glsl \
tonemap_hdr_fp.glsl

EXTRA_DIST = $(shaders_DATA)
